# IRDiscordBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0840dd23d9bb_table_init.py  bd74211255e7_modify_logentrytype_values.py
bot/: main.py
bot/cogs/: __init__.py  cogs_base.py  configuration.py  embeds.py  moderation.py  report.py  roles.py  rules.py  tickets.py  tickets_admin.py  tickets_config.py  verifications.py
bot/core/: config.py
bot/database/: models.py
bot/database/data/: engine.py
bot/database/repositories/: __init__.py  embeds_repository.py  gravity_level_repository.py  guild_repository.py  guild_rules_repository.py  infractions_repository.py  logs_entry_repository.py  report_repository.py  role_options_repository.py  role_panel_repository.py  ticket_message_repository.py  ticket_panel_repository.py  ticket_type_repository.py  (+2 more)
bot/exception/: __init__.py  cogs.py  database.py
bot/loggers/: __init__.py  embeds.py  main_logger.py  moderation.py  verification.py
bot/services/: mailer.py
bot/templates/: transcript.html  verification_email.html
bot/utils/: bot_extensions.py  calculate_timeout.py  get_channel.py  get_guild.py  get_member.py  get_role.py  has_permission.py  logging_setup.py  pagination_view.py  ticket_permissions.py
bot/view/: components.py  panel_list_view.py  panel_option_view.py  role_panel_view.py
doc/01-deployment/: configuration.md  setup.md
doc/04-functionality/: embeds.md  verification.md
(+43 files in other folders)
