[project]
name = "irdiscordbot"
version = "0.1.0"
description = "A Discord bot for IR-related tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "colorlog>=6.10.1",
    "cryptography>=46.0.7",
    "jinja2>=3.1.6",
    "py-cord>=2.8.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.3.2"]
sqlite = ["aiosqlite>=0.22.1"]

[project.scripts]
bot = "bot.main:main"
